--- a/Good_Copy_of_2_diophantine.ipynb
+++ b/Good_Copy_of_2_diophantine.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyMNnDzTQXG0/ZtA9G+OlPH4",
+      "authorship_tag": "ABX9TyNtamm3HzxjfLW1SkJjJQ9y",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -254,7 +254,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 5,
+      "execution_count": 7,
       "metadata": {
         "id": "0mM8Nr_dhT82"
       },
@@ -301,13 +301,13 @@
         "      e[i] += d[i][j]*((q[j]))\n",
         "      # e[i] += d[i][j]\n",
         "\n",
-        "      print(\"e[i]: \", e[i], \"i: \", i,\"j: \", j)\n",
+        "      # print(\"e[i]: \", e[i], \"i: \", i,\"j: \", j)\n",
         "\n",
         "    # k value for each row\n",
-        "    print(\"before ki, x:  ei:\", x, e[i])\n",
-        "    print(x/e[i], math.floor(x/e[i]))\n",
+        "    # print(\"before ki, x:  ei:\", x, e[i])\n",
+        "    # print(x/e[i], math.floor(x/e[i]))\n",
         "    k[i] = math.floor(x/e[i])\n",
-        "    print(\"ki: \", k[i])\n",
+        "    # print(\"ki: \", k[i])\n",
         "\n",
         "    # # !!!!!!! Update x  --> This step is only for extremely big numbers\n",
         "    # print(\"ji * ei: \", k[i] * e[i])\n",
@@ -317,23 +317,23 @@
         "    # loop thru primes again and adjust Cj values for current row i\n",
         "    for j in range(0,m):\n",
         "      c[i][j] += k[i] * d[i][j]\n",
-        "      print(\"c[j]: \", c[i], \"j: \", j)\n",
-        "    print(\"C: \",c)\n",
-        "    print(\"e: \", e)\n",
+        "      # print(\"c[j]: \", c[i], \"j: \", j)\n",
+        "    # print(\"C: \",c)\n",
+        "    # print(\"e: \", e)\n",
         "\n",
         "    # reconstruction of argument --> error checking purposes\n",
         "    x2 = c[i][0] * q[0] + c[i][1] * q[1] + e[i]\n",
-        "    print(\"reconstructed x: \",x2)\n",
+        "    # print(\"reconstructed x: \",x2)\n",
         "\n",
-        "  print(\"C: \",c)\n",
-        "  print(\"e: \", e)\n",
+        "  # print(\"C: \",c)\n",
+        "  # print(\"e: \", e)\n",
         "\n",
         "  # Find a suitable ei\n",
         "  i = 0\n",
         "  while (e[i] > 2**(-r)):\n",
         "    i += 1\n",
         "  x2 = c[i][0] * q[0] + c[i][1] * q[1] + e[i]\n",
-        "  print(\"x2: \",x2)\n",
+        "  # print(\"x2: \",x2)\n",
         "\n",
         "  # Step 3: Evaluate e^ei using EXP\n",
         "  e_ei = EXP(e[i])\n",
@@ -347,13 +347,13 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 6,
+      "execution_count": 8,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "K1D1Z18LYrdf",
-        "outputId": "87620d8e-b90c-49a0-fedd-f8273999aec0"
+        "outputId": "6fc7a567-61dc-48a6-a6a5-f940d063cdae"
       },
       "outputs": [
         {
@@ -364,39 +364,6 @@
             " [[6.93147181e-01 0.00000000e+00]\n",
             " [1.77635684e-15 0.00000000e+00]\n",
             " [2.22044605e-16 1.09861229e+00]]\n",
-            "e[i]:  0.480453013918201 i:  0 j:  0\n",
-            "e[i]:  0.480453013918201 i:  0 j:  1\n",
-            "before ki, x:  ei: 4 0.480453013918201\n",
-            "8.32547592402243 8\n",
-            "ki:  8\n",
-            "c[j]:  [5.54517744447956, 0] j:  0\n",
-            "c[j]:  [5.54517744447956, 0] j:  1\n",
-            "C:  [[5.54517744447956, 0]]\n",
-            "e:  [0.480453013918201, 0, 0]\n",
-            "reconstructed x:  4.32407712526381\n",
-            "e[i]:  1.23127673489866e-15 i:  1 j:  0\n",
-            "e[i]:  1.23127673489866e-15 i:  1 j:  1\n",
-            "before ki, x:  ei: 4 1.23127673489866e-15\n",
-            "3.24866042427840e+15 3248660424278399\n",
-            "ki:  3248660424278399\n",
-            "c[j]:  [5.77078016355585, 0] j:  0\n",
-            "c[j]:  [5.77078016355585, 0] j:  1\n",
-            "C:  [[5.54517744447956, 0], [5.77078016355585, 0]]\n",
-            "e:  [0.480453013918201, 1.23127673489866e-15, 0]\n",
-            "reconstructed x:  4.00000000000000\n",
-            "e[i]:  1.53909591862332e-16 i:  2 j:  0\n",
-            "e[i]:  1.20694896081258 i:  2 j:  1\n",
-            "before ki, x:  ei: 4 1.20694896081258\n",
-            "3.31414179876089 3\n",
-            "ki:  3\n",
-            "c[j]:  [6.66133814775094e-16, 0] j:  0\n",
-            "c[j]:  [6.66133814775094e-16, 3.29583686600433] j:  1\n",
-            "C:  [[5.54517744447956, 0], [5.77078016355585, 0], [6.66133814775094e-16, 3.29583686600433]]\n",
-            "e:  [0.480453013918201, 1.23127673489866e-15, 1.20694896081258]\n",
-            "reconstructed x:  4.82779584325033\n",
-            "C:  [[5.54517744447956, 0], [5.77078016355585, 0], [6.66133814775094e-16, 3.29583686600433]]\n",
-            "e:  [0.480453013918201, 1.23127673489866e-15, 1.20694896081258]\n",
-            "x2:  4.00000000000000\n",
             "Approximated e^4: 54.59815003314431\n",
             "Actual e^4:       54.598150033144236\n"
           ]
@@ -409,7 +376,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 6
+          "execution_count": 8
         }
       ],
       "source": [
